<resources>
    <string name="app_name">Task5</string>
    <string name="computer_name_example">Apple I</string>
    <string name="summary_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec ante mi. Ut tempor placerat leo in mollis. Proin in pulvinar ligula, at fermentum nisl. Integer hendrerit mollis ligula, eget interdum nulla luctus eu. Vivamus lacinia, est eget varius interdum, nisl ligula rhoncus est, vitae consectetur velit orci sit amet ex. Nulla quis nisi erat. Nullam vel sollicitudin lectus. Quisque mattis sapien ac nulla venenatis, sollicitudin pretium sapien volutpat. Curabitur ullamcorper ipsum vel lectus tristique, id sollicitudin nulla tristique. Curabitur ac elementum tortor.</string>
    <string name="computer_release_date_example">11 December 2001</string>
    <string name="computer_release_date_title">Release Date</string>
    <string name="computer_introductory_price_example">US$666.66</string>
    <string name="computer_introductory_price_title">Introductory Price</string>
    <string name="computer_developer_title">Developer</string>
    <string name="computer_developer_example">Steve Wozniak &amp; Steve Jobs</string>
    <string name="vintage_computers">Vintage Computers</string>
    <string name="detail_activity_title">More Information</string>
    <string name="main_activity_title">Vintage Computers</string>
    <string name="label_computers">Computers</string>
    <string name="label_developers">Developers</string>
    <string name="label_history">History</string>
    <string name="computer_photo_description">Computer Photo</string>
    <string name="tv_developer_name_example">Apple Inc.</string>
    <string name="tv_developer_hq_example">1 Infinite Loop; Cupertino, CA 95014</string>
    <string name="developer_logo">Developer logo</string>
    <string name="headquarters">Headquarters</string>
</resources>