<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:background="@drawable/rounded_border">
    <ImageView
        android:id="@+id/iv_computer_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/image_not_available"/>
    <TextView
        android:id="@+id/tv_computer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_computer_photo"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/computer_name_example" />
    <TextView
        android:id="@+id/tv_computer_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/iv_computer_photo"
        app:layout_constraintTop_toBottomOf="@id/tv_computer_name"
        android:text="@string/computer_developer_example"
        android:textSize="14sp"
        android:layout_marginLeft="10dp" />
    <TextView
        android:id="@+id/tv_computer_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_computer_developer"
        app:layout_constraintStart_toEndOf="@id/iv_computer_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constrainedWidth="true"
        android:layout_marginStart="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/summary_example"
        android:layout_marginLeft="10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>